[ADD] fix color on mobile

--- a/src/customStyles.css
+++ b/src/customStyles.css
@@ -1147,7 +1147,6 @@ input[type="checkbox"]:checked ~ .bar .middle {
         width: 200px;
         margin-bottom: 100px;
         margin-top: 50px;
-        background-color: #8f2e23;
     }
 
     .contain h3 {
